--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-draggable-flatlist": "^2.5.1",
     "react-native-elements": "^3.1.0",
     "react-native-gesture-handler": "~1.9.0",
     "react-native-paper": "^4.5.0",
