update readme and example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,2 @@
-mongodb+srv://user-4za6:<password>@eruku-mesi.l7ysf.mongodb.net/<dbname>?retryWrites=true&w=majority
-
-# MONGO_USERNAME=
-# MONGO_PASSWORD=
-# MONGO_DBNAME=
+# replace password and dbname with mongodb password and database name
+MONGODB_URI=mongodb+srv://user-4za6:<password>@eruku-mesi.l7ysf.mongodb.net/<dbname>?retryWrites=true&w=majority
