--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-tab-view": "^2.15.2",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
+    "react-native-windows": "^0.63.17",
     "react-navigation": "^4.4.3"
   },
   "devDependencies": {
