--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,6 @@
 # replace password and dbname with mongodb password and database name
 
 MONGODB_URI=mongodb+srv://user-4za6:<password>@eruku-mesi.l7ysf.mongodb.net/<dbname>?retryWrites=true&w=majority
+
+# optional
+# MONGODB_PORT=
