--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
     "react-native-windows": "^0.63.17",
-    "react-navigation": "^4.4.3"
+    "react-navigation": "^4.4.3",
+    "expo-image-picker": "~9.2.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
