--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "dayjs": "^1.10.3",
     "dotenv": "^8.2.0",
     "expo": "~40.0.0",
+    "expo-av": "^8.7.0",
+    "expo-image-picker": "~9.2.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -33,8 +35,7 @@
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
     "react-native-windows": "^0.63.17",
-    "react-navigation": "^4.4.3",
-    "expo-image-picker": "~9.2.0"
+    "react-navigation": "^4.4.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
