--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test.watch": "jest --watch"
   },
   "author": "",
   "license": "ISC",
@@ -15,5 +16,9 @@
     "express": "^4.17.1",
     "express-validator": "^5.3.1",
     "mongoose": "^5.11.8"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3",
+    "supertest": "^6.1.3"
   }
 }
