--- a/stress/events/DELETE.yaml
+++ b/stress/events/DELETE.yaml
@@ -6,6 +6,6 @@ config:
 scenarios: 
   - flow:
       - delete:
-          url: "http://localhost:4000/events/5ffb5726ee35744495bf590b"
+          url: "http://localhost:4000/events/faultyID"
           expect:
-            statusCode: 200
+            statusCode: 500
