--- a/stress/feedback/DELETE.yaml
+++ b/stress/feedback/DELETE.yaml
@@ -6,6 +6,6 @@ config:
 scenarios: 
   - flow:
       - delete:
-          url: "http://localhost:4000/feedback/601ef4e3131f86304cb22762"
+          url: "http://localhost:4000/feedback/faultyID"
           expect:
-            statusCode: 200
+            statusCode: 500
