--- a/stress/file/DELETE.yaml
+++ b/stress/file/DELETE.yaml
@@ -6,6 +6,6 @@ config:
 scenarios: 
   - flow:
       - delete:
-          url: "http://localhost:4000/files/601efabcfc59f747183ee6df"
+          url: "http://localhost:4000/files/faultyID"
           expect:
-            statusCode: 200
+            statusCode: 500
