--- a/stress/notification/POST.yaml
+++ b/stress/notification/POST.yaml
@@ -6,9 +6,9 @@ config:
 scenarios: 
   - flow:
       - post:
-          url: "http://localhost:4000/information/edit/faultyID"
+          url: "http://localhost:4000/notifications/edit/faultyID"
           json:
-                title: "New edits"
-                content: "editted content"
+              receiveNotifications: false
+              preferredTheme: "dark"
           expect:
             statusCode: 500
