--- a/stress/notification/POST_2.yaml
+++ b/stress/notification/POST_2.yaml
@@ -6,11 +6,8 @@ config:
 scenarios: 
   - flow:
       - post:
-          url: "http://localhost:4000/noticiations/add/"
+          url: "http://localhost:4000/notifications/add/"
           json:
-              receiver: ["5ffb4dbeee35744495bf58fc"]
               body: "TESTING NOTIFICATION"
           expect:
-            statusCode: 200
-
-
+            statusCode: 400
