--- a/stress/photo/DELETE.yaml
+++ b/stress/photo/DELETE.yaml
@@ -6,6 +6,6 @@ config:
 scenarios: 
   - flow:
       - delete:
-          url: "http://localhost:4000/photos/5ffb5b2aee35744495bf590e"
+          url: "http://localhost:4000/photos/faultyID"
           expect:
-            statusCode: 200
+            statusCode: 500
