--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest --verbose"
+    "test": "jest --verbose tests"
   },
   "jest": {
     "preset": "react-native"
