--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo": "~40.0.0",
     "expo-av": "^8.7.0",
     "expo-image-picker": "~9.2.0",
+    "expo-secure-store": "~9.3.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
