--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^8.2.0",
     "expo": "~40.0.0",
     "expo-av": "^8.7.0",
+    "expo-document-picker": "~8.4.1",
     "expo-image-picker": "~9.2.0",
     "expo-secure-store": "~9.3.0",
     "expo-splash-screen": "~0.8.1",
