--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "expo": "~40.0.0",
     "expo-av": "^8.7.0",
     "expo-document-picker": "~8.4.1",
+    "expo-file-system": "~9.3.0",
     "expo-image-picker": "~9.2.0",
+    "expo-media-library": "^11.0.0",
+    "expo-permissions": "^10.0.0",
     "expo-secure-store": "~9.3.0",
     "expo-splash-screen": "~0.8.1",
     "expo-status-bar": "~1.0.3",
