--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,3 +5,7 @@ MONGODB_URI=mongodb+srv://user-4za6:<password>@eruku-mesi.l7ysf.mongodb.net/<dbn
 
 # optional
 # MONGODB_PORT=
+
+#AWS keys
+AWS_Access_Key_Id=TEST
+AWS_Secret_Access_Key=TEST
