--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,12 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "expo-server-sdk": "^3.6.0",
     "express": "^4.17.1",
     "express-validator": "^5.3.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.8",
+    "node-cron": "^3.0.0",
     "mongoose-sequence": "^5.3.1",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0"
