--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "preset": "react-native"
   },
   "dependencies": {
+    "expo-permissions": "^10.0.0",
+    "expo-media-library": "^11.0.0",
+    "expo-location": "~10.0.0",
+    "expo-constants": "~9.3.3",
+    "expo-notifications": "~0.8.2",
     "@react-native-community/datetimepicker": "^3.0.9",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.2",
@@ -26,8 +31,6 @@
     "expo-document-picker": "~8.4.1",
     "expo-file-system": "~9.3.0",
     "expo-image-picker": "~9.2.0",
-    "expo-media-library": "^11.0.0",
-    "expo-permissions": "^10.0.0",
     "expo-secure-store": "~9.3.0",
     "expo-splash-screen": "~0.8.1",
     "expo-status-bar": "~1.0.3",
