update instructions to test push notifications and .env.sample

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,9 +3,17 @@
 
 MONGODB_URI=mongodb+srv://user-4za6:<password>@eruku-mesi.l7ysf.mongodb.net/<dbname>?retryWrites=true&w=majority
 
-# optional
-# MONGODB_PORT=
 
 #AWS keys
-AWS_Access_Key_Id=TEST
-AWS_Secret_Access_Key=TEST
+AWS_Access_Key_Id=<aws_access_key_id>
+AWS_Secret_Access_Key=<aws_secret_access_key>
+
+# Expo access key for additional security
+# optional
+# EXPO_ACCESS_TOKEN=
+
+# optional
+# APP_PORT=
+
+# optional
+# PUSH_NOTIFICATIONS_SCHEDULE=
