--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --testEnvironment=node --runInBand --detectOpenHandles  --watch",
     "test.watch": "jest --testEnvironment=node --runInBand --detectOpenHandles  --watch"
   },
   "author": "",
