--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --testEnvironment=node --runInBand --detectOpenHandles",
-    "test.watch": "jest --testEnvironment=node --runInBand --detectOpenHandles  --watch"
+    "test": "jest --testEnvironment=node --runInBand --detectOpenHandles --verbose",
+    "test.watch": "jest --testEnvironment=node --runInBand --detectOpenHandles  --verbose --watch"
   },
   "author": "",
   "license": "ISC",
