--- a/stress/mediaContent/GET_2.yaml
+++ b/stress/mediaContent/GET_2.yaml
@@ -6,7 +6,6 @@ config:
 scenarios: 
   - flow:
       - get:
-          url: "/settings"
+          url: "/mediaContent/faultyID"
         expect:
-            statusCode: 200
-
+            statusCode: 500
