--- a/backend/package.json
+++ b/backend/package.json
@@ -19,10 +19,10 @@
     "express-validator": "^5.3.1",
     "moment": "^2.29.1",
     "mongoose": "^5.11.8",
-    "node-cron": "^3.0.0",
     "mongoose-sequence": "^5.3.1",
     "multer": "^1.4.2",
-    "multer-s3": "^2.9.0"
+    "multer-s3": "^2.9.0",
+    "node-cron": "^3.0.0"
   },
   "devDependencies": {
     "jest": "^26.6.3",
